# clipboard-sync

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
client/: Cargo.toml
client/src/: clipboard.rs  config.rs  main.rs
common/: Cargo.toml
common/proto/: clipboard.proto
common/src/: config.rs  lib.rs
server/: Cargo.toml
server/src/: config.rs  main.rs
src/: client.rs  clipboard.rs  config.rs  error.rs  http.rs  main.rs
