[package]
name = "clipboard-sync"
version = "0.3.3"
authors = ["Maxim Zhukov <mussitantesmortem@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard-sync-lib = { path = "../common" }
flexi_logger = "0.17.1"
log = "0.4.14"
prost = "0.7"
tokio = { version = "1.2.0", features = ["fs", "macros", "rt-multi-thread"] }
tonic = "0.4"
x11-clipboard = "0.5.2"
