[package]
name = "clipboard-sync-lib"
version = "0.3.0"
authors = ["Maxim Zhukov <mussitantesmortem@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.7"
tonic = "0.4"

[build-dependencies]
tonic-build = "0.4"
