[package]
name = "clipboard-sync-lib"
version = "0.3.3"
authors = ["Maxim Zhukov <mussitantesmortem@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
clap_generate = "3.0.0-beta.2"
dirs = "3.0.1"
prost = "0.7"
serde = { version = "1.0.124", features = ["derive"] }
toml = "0.5.8"
tonic = { version = "0.4", features = ["transport", "tls"] }

[build-dependencies]
tonic-build = "0.4"
