[package]
name = "clipboard-sync-server"
version = "0.2.0"
authors = ["Maxim Zhukov <mussitantesmortem@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.0.0-beta.2"
actix-web = "4.0.0-beta.1"
clap = "3.0.0-beta.2"
clap_generate = "3.0.0-beta.2"
flexi_logger = "0.17.1"
log = "0.4.13"
serde = { version = "1.0.119", features = ["derive"] }
serde_json = "1.0.61"
tokio = { version = "1.0.1", features = ["sync"] }
