[package]
name = "clipboard-sync-server"
version = "0.3.3"
authors = ["Maxim Zhukov <mussitantesmortem@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
clap_generate = "3.0.0-beta.2"
clipboard-sync-lib = { path = "../common" }
flexi_logger = "0.17.1"
log = "0.4.14"
prost = "0.7"
tokio = { version = "1.2.0", features = ["sync", "rt-multi-thread"] }
tonic = "0.4"
